--- a/home.html
+++ b/home.html
@@ -110,18 +110,18 @@
 	<div class="topdiv">
 		<!--Full Bleed Background-->
 		<article data-name="article-full-bleed-background">
-			<div class="cf" style="background: url(https://lh3.googleusercontent.com/JooWJiwkEJEHOLAKml-TcaBuXDSSVqE5BzivHmpoq1kKUizPV2aRqcyEwUzuOOka9CnCIkbHjm-Yog2eTajInqoV2PH5bt24d3XL8fyIn8T-hfNCzDopqpC-LEPx8iRpQCky12du=w2400); no-repeat fixed; background-size: cover; background-position: center;">
+			<div class="cf" style="background: url(img/beach.JPG); no-repeat fixed; background-size: cover; background-position: center;">
            
 				
 				<div class="fl pa3 pa4-ns bg-grey measure-narrow f3">
 					<header class="bb pv4">
 						<h2 class="f2 fw7 ttu tracked lh-title mt0 mb3">Welcome to my site</h2>
 						<h4 class="f3 fw4 i lh-title mt0">Writings, photos, videos</h4>
-                        <div class="profilehide"><img class="profilehide" src="https://aidanmcgloin.com/img/SNV_6610.jpg"></div>
+                        <div class="profilehide"><img class="profilehide" src="img/beach.JPG"></div>
 					</header>
 					<section class="pt5 pb4 lh-copy measure mt4 mt0-ns">
 						<p>
-						I was raised in the emerging news desert of the Inland Empire. My family used to get copies of the <i>Redlands Daily Facts, Riverside Press-Enterprise</i> and <i>New York Times,</i> but like many families, turned digital. My local papers are now owned by absentee hedge funds, although a start up has been gaining traction.<br><br>I studied journalism, with a minor in law and society, at Cal Poly, San Luis Obispo, where I worked as a reporter for all four years at the campus paper, <i>Mustang News</i>. I took a quarter break from the paper to work with <i>New Times,</i> an alt-weekly with a community focus born in the democratic media explosion of the 1980's. My senior year, I took a quarter studying European journalism, mostly in the Netherlands, Switzerland and Hungary, using free social archives. My senior project was a series of interviews with successful new-age publishers, from California to Switzerland, and from non-profits to free print-only papers.<br><br>	My studies have convinced me that journalism isn't broken, publishing is, and it has been for a while.<br><br>My end goal is to be a publisher. We need more good publishers than we need good journalists.</p>
+						I was raised in the emerging news desert of the Inland Empire. My family used to get copies of the <i>Redlands Daily Facts, Riverside Press-Enterprise</i> and <i>New York Times,</i> but like many families, turned digital. My local papers are now owned by absentee hedge funds, although a start up has been gaining traction.<br><br>I studied journalism, with a minor in law and society, at Cal Poly, San Luis Obispo, where I worked as a reporter for all four years at the campus paper, <i>Mustang News</i>. I took a quarter break from the paper to work with <i>New Times,</i> an alt-weekly with a community focus born in the democratic media explosion of the 1980's. My senior year, I took a quarter studying European journalism, mostly in the Netherlands, Switzerland and Hungary, using free social archives. My senior project was a series of interviews with successful new-age publishers, from California to Switzerland, and from non-profits to free print-only papers.<br><br>	My studies have convinced me that journalism isn't broken, publishing is, and it has been for a while.</p>
 					</section>
 				</div>
 			</div>
