--- a/extension/iframe.html
+++ b/extension/iframe.html
@@ -3,6 +3,6 @@
     <link href="extension.css" rel="stylesheet" type="text/css">
 </head>
     
-<iframe src="https://aidanmcgloin.com/extension/updated_pages.html" height=100% width=100% style="border:none;" ></iframe> 
+<iframe src="https://aidanmcgloin.com/extension/newtabs.html" height=100% width=100% style="border:none;" ></iframe> 
 
 </html>
