--- a/photos.html
+++ b/photos.html
@@ -125,7 +125,7 @@
             <div><p>San Luis Obispo jail death protestor Dawn Anderson<br>SLO Courthouse | March 19, 2018</p></div>
         </div>
         <div class="grow captioncontainer  fl w-50 w-50-l pl2 pl0-l pr2-l pb3">
-          <a data-fancybox="gallery" href="https://unsplash.com/photos/ocC7Xu-QNvY"><img src="https://unsplash.com/photos/ocC7Xu-QNvY"></a>
+          <a data-fancybox="gallery" href="https://images.unsplash.com/photo-1629150351001-a1d10caca1ab?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1347&q=80"><img src="https://images.unsplash.com/photo-1629150351001-a1d10caca1ab?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1347&q=80"></a>
             <div><p>Pismo Beach, San Luis Obispo Couty<br>Cal Poly | 2017</p></div>
         </div>
         <div class="grow captioncontainer  fl w-100 w-50-l pl2-l">
