--- a/photos.html
+++ b/photos.html
@@ -106,7 +106,7 @@
   </header>
   <div class="row ph3 ph4-m ph5-l">
     <p class="lh-copy f5 f3-m f1-l measure center pv4">
-        I shoot primarily with a Sony Alpha 330 with kit lenses.</p> 
+        My background is in journalism/photojournalism, so my photos are usually more environmental than artistic, and more outdoors than interior.</p> 
   <div class="f5 f3-m lh-copy">
       <div class="cf dt-l w-100 pv4">
         <div class="grow captioncontainer  dtc-l v-mid mw6 pr3-l">
@@ -139,7 +139,8 @@
         <div class="dtc-l v-mid f6 f5-m f4-l measure-l">
           <p class="measure pv4-l center">
             <span class="fw9 fw4-ns">
-                Sometimes I shoot with a Nikon D3300, like I did with this photo of Carl Benjamin, Milo Yiannopolous, Laura Loomer, and Austin Fletcher.<br><br>I try to think of it as not cheating on my Sony, but I know it is. I don't have a telescope lens with Nikon, which can be a problem, but D3300 takes video. Ideally, I have both.</span>
+                I shoot primarily with a Sony Alpha 330 with kit lenses, but I'm learning how to use an Olympus E-M5.<br><br>
+                Sometimes I shoot with a Nikon D3300, like I did with this photo of Carl Benjamin, Milo Yiannopolous, Laura Loomer, and Austin Fletcher, from a forum I covered.</span>
           </p>
         </div>
                          <div class="grow captioncontainer dtc-l v-mid mw6 pr3-l">
@@ -156,7 +157,7 @@
   </header>
       <div class="row ph3 ph4-m ph5-l">
     <p class="lh-copy f5 f3-m f1-l measure center pv4">
-        All of my photos I personally edit. I've used Photoshop, Adobe Lightroom, Camera Raw and Pixlr over the years to edit them, but now I stick with Lightroom since it makes edits more efficient.</p> 
+        All of my photos I personally edit. I've used Photoshop, Adobe Lightroom, Camera Raw and Pixlr over the years to edit them, but now I stick with Lightroom for the efficiency.</p> 
           <br>
   <div class="f5 f3-m lh-copy">
 <div class="cf dt-l w-100 pv4">
@@ -194,7 +195,7 @@
   </header>
       <div class="row ph3 ph4-m ph5-l">
     <p class="lh-copy f5 f3-m f1-l measure center pv4">
-        All of my photos I personally edit. I've used Photoshop, Adobe Lightroom, Camera Raw and Pixlr over the years to edit them, but now I stick with Lightroom since it makes edits more efficient.</p> 
+        Although I am used and trained to take photos for a single publication, I am now opening myself up to freelance opportunities. </p> 
           <br>
   <div class="f5 f3-m lh-copy">
 <div class="cf dt-l w-100 pv4">
