relinking twitter, updating copyright

--- a/newtabs.html
+++ b/newtabs.html
@@ -152,5 +152,6 @@
     </div>
 
   </article></section>
+       	    <p>Designs copyright Aidan McGloin 2021. Assets property of CalMatters</p>
 </body>
 </html>
