--- a/pages/les_mis_transformation.html
+++ b/pages/les_mis_transformation.html
@@ -70,7 +70,7 @@ This goes beyond literary theory. Ask yourself what choices you have turned down
         
         <br><br><br>
         <footer>
-        <b>Contact|</b><a href="https://www.goodreads.com/user/show/106471028-aidan-mcgloin">Goodreads</a>|pagesexperiment@gmail.com|<a href="https://instagram.com/aidan_mcgloin_">Instagram</a>|<a href="https://twitter.com/aidan_mcgloin">Twitter</a>       
+        <b>Contact|</b><a href="https://www.goodreads.com/user/show/106471028-aidan-mcgloin">Goodreads</a>|aidancmcgloin@gmail.com|<a href="https://instagram.com/aidan_mcgloin_">Instagram</a>|<a href="https://twitter.com/aidan_mcgloin">Twitter</a>       
         </footer>
     </body>
 </html>
