--- a/pages/index.html
+++ b/pages/index.html
@@ -12,9 +12,8 @@
     <body>
     <h1 id="header">Book thoughts</h1><h2 id='bio_header'>What I read</h2><p id='bio_text'>Thank you for checking out my website! I like to think that I have a varied interest in books. I recently began a challenge to read through all the book recommendations I have received for as far back as I can remember. So far that has included Steinbeck's <i>Cannery Row</i>, Christie's <i>And Then There Were None </i>and Heinlein's <i>The Moon is a Harsh Mistress</i>. Besides those books, I've been trying to read alongside some of my friends, in a book club of two. After those, I've been getting more involved in gothic horror, specifically Shirley Jackson. I read half of Upton Sinclair's Lanny Budd series, a historically accurate and informative historic fiction series about European politics starting right before World War One and ending in the Cold War. My background is in journalism, so I have a fascination with books about the 1st Amendment, civil rights, and the free press.
 
-<br><br>I designed this Python script to empower other readers to post more long-form reviews. There is not a good space for that right now. Twitter is dying. Goodreads is clunky, focuses too much on reading goals, and doesn't foster discussion. Instagram is limited by being a photo-centric site.
+<br><br>This website can be easily duplicated by you, with the addition of new reviews mostly automated. Your version will be incredibly easy to set up. If you are interested in duplicating this, you can follow <a href="https://github.com/amcgloin/Portfolio/tree/master/pages">this link to my code repository</a>. There are more instructions there.</p>
 
-<br><br>Your version of this site should be incredibly easy to set up.</p>
 
 <div class="box">
     <h4>Jump to a review</h4>
