--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>aidan"</title>
+        <title>Aidan</title>
         <meta name="description" content="For readers.">
         <link rel="stylesheet" href="style.css">
     </head>
