--- a/pages/index.html
+++ b/pages/index.html
@@ -12,11 +12,11 @@
     <body>
     <h1 id="header">Book thoughts</h1><h2 id='bio_header'>What I read</h2><p id='bio_text'>Thank you for checking out my website! I like to think that I have a varied interest in books. I recently began a challenge to read through all the book recommendations I have received for as far back as I can remember. So far that has included Steinbeck's <i>Cannery Row</i>, Christie's <i>And Then There Were None </i>and Heinlein's <i>The Moon is a Harsh Mistress</i>. Besides those books, I've been trying to read alongside some of my friends, in a book club of two. After those, I've been getting more involved in gothic horror, specifically Shirley Jackson. I read half of Upton Sinclair's Lanny Budd series, a historically accurate and informative historic fiction series about European politics starting right before World War One and ending in the Cold War. My background is in journalism, so I have a fascination with books about the 1st Amendment, civil rights, and the free press.
 
-<br><br>This website can be easily duplicated by you, with the addition of new reviews mostly automated. Your version will be incredibly easy to set up. If you are interested in duplicating this, you can follow <a href="https://github.com/amcgloin/Portfolio/tree/master/pages">this link to my code repository</a>. There are more instructions there.</p>
+<!---<br><br>This website can be easily duplicated by you, with the addition of new reviews mostly automated. Your version will be incredibly easy to set up. If you are interested in duplicating this, you can follow <a href="https://github.com/amcgloin/Portfolio/tree/master/pages">this link to my code repository</a>. There are more instructions there.</p>--->
 
 
 <div class="box">
-    <h4>Jump to a review</h4>
+    <h4>Jump to a review</h4><h5><a href='#We Have Always Lived in the Castle'><i>We Have Always Lived in the Castle</i> by Shirley Jackson</a></h5>
     <h5><a href='#Cannery Row'><i>Cannery Row</i> by John Steinbeck</a></h5>
     <h5> <a href="#Les Miserables"><i>Les Miserables</i> by Victor Hugo</a></h5>
     <h5> <a href="#If This Isn't Nice, What Is?"><i>If This Isn't Nice, What Is?</i> by Kurt Vonnegut</a></h5>
@@ -24,9 +24,9 @@
     <h5> <a href="#Dodsworth"><i>Dodsworth</i> by Sinclair Lewis</a></h5>
     </div>
 
-<h1>Reviews</h1>
+<h1>Reviews</h1><h2 id='We Have Always Lived in the Castle'><i>We Have Always Lived in the Castle</i> by Shirley Jackson</h2><p>It's been a week since I finished this book, and I still don't know what to think of it. It's about two sisters that live together in their family's large Victorian house after their entire family was poisoned at dinner (with the exception of an uncle, who lives with them.) <br><br> It's also about small town persecution—Jackson felt she was persecuted by the town in which she lived, and brought her feelings into the book. But, throughout this book, I have wondered if the persecution against the sisters is justified. They certainly are weird, and as far as the town knows, one of them definitely murdered their family and got away with it. Hell, I'd persecute someone who I think put anthrax in the family's sugar bowl. The narrator is one of the sisters, and describes her needs the way a child does. She plans to trap herself in this house (that's not a spoiler, the name of the book is a nod to her commitment to stay there among her inheritance.) Her description of the house is similar to the house Jackson wrote abo</p>
 <h2 id='Cannery Row'><i>Cannery Row</i> by John Steinbeck</h2><p><i>Cannery Row</i> has been on my list since college: it was recommended to me by a friend, although I don't know which one. It's Steinbeck's eight book that I've read, and each new novel adds another layer to the next. This book is not about Monterey's Cannery Row at all. The cannery is mentioned as the place some people work, but we don't realy get to hear about them at all, besides a couple of characters that pick up jobs there in a very brief aside. It's about bums living in Monterey that decide to do something nice for a friend of theirs. It's about how they mess up theirat nice thing, and it's about how they mess up their lives. <i>Cannery Row</i> builds these guys up, and their landlord, and their friend, in such a way that you can almost touch them. And you are guaranteed to find bits of them in you, and in your friends as well. Overall, it's a beautiful book, and a short read. I recommend. 9/10. </p>
-<h3 id="Les Miserables"><i>Les Miserables</i> by Victor Hugo</h3><p>People don’t often agree to be better versions of themselves.
+<h2 id="Les Miserables"><i>Les Miserables</i> by Victor Hugo</h2><p>People don’t often agree to be better versions of themselves.
     <p>
         That may sound obvious. But Les Miserables’ examination of that tendency—compared to the majority of literature's denial of it—is what makes the novel worthy of being in the Western canon. </p>
                 <p>Let’s look at the biggest redemption story in Les Miserables.</p>
