--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,26 @@
         <title>Aidan</title>
         <meta name="description" content="For readers.">
         <link rel="stylesheet" href="style.css">
+
+ <!---The following sets up the favicons--->
+<link rel="apple-touch-icon" sizes="57x57" href="https://aidanmcgloin.com/img/fav/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://aidanmcgloin.com/img/fav/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://aidanmcgloin.com/img/fav/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://aidanmcgloin.com/img/fav/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://aidanmcgloin.com/img/fav/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://aidanmcgloin.com/img/fav/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://aidanmcgloin.com/img/fav/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://aidanmcgloin.com/img/fav/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://aidanmcgloin.com/img/fav/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="https://aidanmcgloin.com/img/fav/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://aidanmcgloin.com/img/fav/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="https://aidanmcgloin.com/img/fav/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://aidanmcgloin.com/img/fav/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="img/fav/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">   
+        
     </head>
     <body>
     <h1 id="header">Book thoughts</h1><h2 id='bio_header'>What I read</h2><p id='bio_text'>Thank you for checking out my website! I like to think that I have a varied interest in books. I recently began a challenge to read through all the book recommendations I have received for as far back as I can remember. So far that has included Steinbeck's <i>Cannery Row</i>, Christie's <i>And Then There Were None </i>and Heinlein's <i>The Moon is a Harsh Mistress</i>. Besides those books, I've been trying to read alongside some of my friends, in a book club of two. After those, I've been getting more involved in gothic horror, specifically Shirley Jackson. I read half of Upton Sinclair's Lanny Budd series, a historically accurate and informative historic fiction series about European politics starting right before World War One and ending in the Cold War. My background is in journalism, so I have a fascination with books about the 1st Amendment, civil rights, and the free press.
