--- a/home.html
+++ b/home.html
@@ -92,9 +92,9 @@
     <div class="dtc v-mid">
       <header>
         <h2 class="f6 fw1 ttu tracked mb2 lh-title covertext"></h2>
-        <h3 class=" lh-title covertext">Aidan McGloin</h3>
+        <h3 class=" lh-title covertext">Journalist</h3>
       </header>
-      <h1 class="f1 f-headline-l fw1 i photocover">Portfolio</h1>
+      <h1 class="f1 f-headline-l fw1 i photocover">Aidan McGloin</h1>
       <blockquote class="ph0 mh0 measure f4 lh-copy center">
         <p class="fw1 covertext">
           
