--- a/home.html
+++ b/home.html
@@ -121,7 +121,11 @@
 					</header>
 					<section class="pt5 pb4 lh-copy measure mt4 mt0-ns">
 						<p>
-						I was raised in the emerging news desert of the Inland Empire. My family used to get copies of the <i>Redlands Daily Facts, Riverside Press-Enterprise</i> and <i>New York Times,</i> but like many families, turned digital. My local papers are now owned by absentee hedge funds, although a start up has been gaining traction.<br><br>I studied journalism, with a minor in law and society, at Cal Poly, San Luis Obispo, where I worked as a reporter for all four years at the campus paper, <i>Mustang News</i>. I took a quarter break from the paper to work with <i>New Times,</i> an alt-weekly with a community focus born in the democratic media explosion of the 1980's. My senior year, I took a quarter studying European journalism, mostly in the Netherlands, Switzerland and Hungary, using free social archives. My senior project was a series of interviews with successful new-age publishers, from California to Switzerland, and from non-profits to free print-only papers.<br><br>	My studies have convinced me that journalism isn't broken, publishing is, and it has been for a while.</p>
+Since 2021, I have been reporting on Southern California legal news for the online publication <a href=“https://followourcourts.com/all-stories”>Follow Our Courts</a>. We specialize in legal news about Riverside and San Bernardino counties, an area that spans 4.6 million residents, 27,270 square miles and 26 superior courthouses. To manage my caseload, I automate data collection using Python codes.
+<br><br>
+I studied journalism, with a law minor, at Cal Poly, San Luis Obispo. My senior year, I opted to research business models instead of taking the default reporting class. My senior project compared news models from four countries over 160 years. Part of my research was conducted independently from school, in European archives and in conversation with journalists from Switzerland and Hungary. As a staff reporter for Mustang News for four years, I focused on administrative news, including covering the state capital and the Cal State Board of Trustees. 
+<br><br>
+Outside of my job, I enjoy programming, reading, and rock climbing. I built a website to promote local businesses in my hometown, and run a weekly book club.
 					</section>
 				</div>
 			</div>
