--- a/home.html
+++ b/home.html
@@ -125,7 +125,7 @@ Since 2021, I have been reporting on Southern California legal news for the onli
 <br><br>
 I studied journalism, with a law minor, at Cal Poly, San Luis Obispo. My senior year, I opted to research business models instead of taking the default reporting class. My senior project compared news models from four countries over 160 years. Part of my research was conducted independently from school, in European archives and in conversation with journalists from Switzerland and Hungary. As a staff reporter for Mustang News for four years, I focused on administrative news, including covering the state capital and the Cal State Board of Trustees. 
 <br><br>
-Outside of my job, I enjoy programming, reading, and rock climbing. I built a website to promote local businesses in my hometown, and run a weekly book club.
+Outside of my job, I enjoy reading, plays, baseball, rock climbing and coding projects. I built a website to promote local businesses in my hometown, and run a weekly book club.
 					</section>
 				</div>
 			</div>
