--- a/home.html
+++ b/home.html
@@ -121,7 +121,7 @@
 					</header>
 					<section class="pt5 pb4 lh-copy measure mt4 mt0-ns">
 						<p>
-Since 2021, I have been reporting on Southern California legal news for the online publication <a href=“https://followourcourts.com/all-stories”>Follow Our Courts</a>. We specialize in legal news about Riverside and San Bernardino counties, an area that spans 4.6 million residents, 27,270 square miles and 26 superior courthouses. To manage my caseload, I automate data collection using Python codes.
+Since 2021, I have been reporting on Southern California legal news for the online publication <a class="db pv4 ph3 ph0-l no-underline grey dim" href=“https://followourcourts.com/all-stories/”>Follow Our Courts</a>. We specialize in legal news about Riverside and San Bernardino counties, an area that spans 4.6 million residents, 27,270 square miles and 26 superior courthouses. To manage my caseload, I automate data collection using Python codes.
 <br><br>
 I studied journalism, with a law minor, at Cal Poly, San Luis Obispo. My senior year, I opted to research business models instead of taking the default reporting class. My senior project compared news models from four countries over 160 years. Part of my research was conducted independently from school, in European archives and in conversation with journalists from Switzerland and Hungary. As a staff reporter for Mustang News for four years, I focused on administrative news, including covering the state capital and the Cal State Board of Trustees. 
 <br><br>
