--- a/home.html
+++ b/home.html
@@ -120,8 +120,8 @@
                         <div class="profilehide"><img class="profilehide" src="img/beach.JPG"></div>
 					</header>
 					<section class="pt5 pb4 lh-copy measure mt4 mt0-ns">
-						<p>Since April of 2025, I have been owning and operating my own newsroom covering the courts of the Inland Empire: <a class="db pv4 ph3 ph0-l no-underline grey dim" href="https://ielaw.news"> Inland Empire Law Weekly.</a> Working on this publication has been an incredible challenge. I report on Riverside and San Bernardino counties, an area that spans 4.6 million residents, 27,270 square miles and 26 superior courthouses.</p>
-						<p>From 2021 until early 2025, I reported for the online publication <a class="db pv4 ph3 ph0-l no-underline grey dim" href=“https://followourcourts.com/all-stories/”>Follow Our Courts</a>.
+						<p>Since April of 2025, I have been owning and operating my own newsroom covering the courts of the Inland Empire: <a href="https://ielaw.news"> Inland Empire Law Weekly.</a> Working on this publication has been an incredible challenge. I report on Riverside and San Bernardino counties, an area that spans 4.6 million residents, 27,270 square miles and 26 superior courthouses.</p>
+						<p>From 2021 until early 2025, I reported for the online publication <a href=“https://followourcourts.com/all-stories/”>Follow Our Courts</a>.
 <br><br>
 I studied journalism, with a law minor, at Cal Poly, San Luis Obispo. My senior year, I opted to research business models instead of taking the default reporting class. My senior project compared news models from four countries over 160 years. Part of my research was conducted independently from school, in European archives and in conversation with journalists from Switzerland and Hungary. As a staff reporter for Mustang News for four years, I focused on administrative news, including covering the state capital and the Cal State Board of Trustees. 
 <br><br>
